--- a/Bwg/Bwg.csproj
+++ b/Bwg/Bwg.csproj
@@ -15,6 +15,7 @@
     <Content Include="wwwroot\images\logo1.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="1.10.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
